--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ rvm:
   - 2.2.5
   - 2.3.1
   - jruby-9.1.2.0
+matrix:
+  allow_failures:
+    - rvm: 2.0.0
+    - rvm: 2.1.9
 
 before_install: gem install bundler -v 1.12.5
 cache: bundler
